[package]
name = "dnrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
bitfield = "0.14.0"
byteorder = "1.4"
bytes = "1.4"
enum_dispatch = "0.3"
rand = "0.8"
tokio = { version = "1.28", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
] }
itertools = "0.10.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
derivative = "2.2.0"
dnrs-macro = { path = "dnrs-macro" }
dnrs-model = { path = "dnrs-model" }

[workspace]
members = ["dnrs-macro", "dnrs-model"]
