[package]
name = "dnrs-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.28"
syn = "2.0.18"
dnrs-model = { path = "../dnrs-model" }
derivative = "2.2.0"
prettyplease = "0.2"
